--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
 title: dario • Sécurité • Vie Privée
-email: contact@dario.com
 description: Comprendre - Agir. La sécurité est une exigence commerciale. La protection de la vie privée est un avantage concurrentiel.
-author: dario
+author: dario.com
 url: https://dario.site
 baseurl: ''
 logo: "/img/chklst.png"
+email: contact@dario.com
 twitter_username: darioS3C
 telephone_number: +1-514-572-0424
 gems:
