--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ google_tracking_id: UA-98131817-3
 
 webmaster_verifications:
   google: B3IJ_LqW_yl1k4gLEYqap8F0_sHGRS_7thoEclC_3kg
-  bing:
+  bing: AC24F3DF5CA3A5221FB7E01EF2D9AAC4
   alexa:
   yandex:
   baidu:
